{
  "version": 4,
  "terraform_version": "1.3.6",
  "serial": 27,
  "lineage": "155bfcfd-49fb-215d-70a4-7c0fde93b84d",
  "resources": [
    {
      "module": "module.aws_vpc.module.aws_vpc",
      "mode": "managed",
      "type": "aws_instance",
      "name": "myinstance",
      "provider": "module.aws_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05e8e219ac7e82eba",
            "arn": "arn:aws:ec2:eu-west-3:300043774766:instance/i-02ebceb45ef6397f1",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-3a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02ebceb45ef6397f1",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "always",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0708a18126c9f07c0",
            "private_dns": "ip-10-0-0-188.eu-west-3.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.188",
            "public_ip": "35.180.229.56",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-01dfb745b68b7b678",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0634efc51db7f367b",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-09cf348309d88f6b1"
            ]
          },
          "dependencies": [
            "module.aws_vpc.module.aws_vpc.aws_security_group.sg",
            "module.aws_vpc.module.aws_vpc.aws_subnet.subnets",
            "module.aws_vpc.module.aws_vpc.aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc.module.aws_vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ntier_igw",
      "provider": "module.aws_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:300043774766:internet-gateway/igw-0b8ecf9ffe2fd9cd9",
            "id": "igw-0b8ecf9ffe2fd9cd9",
            "owner_id": "300043774766",
            "tags": {
              "Name": "ntier-igw"
            },
            "tags_all": {
              "Name": "ntier-igw"
            },
            "vpc_id": "vpc-0404873d798c99fa0"
          },
          "dependencies": [
            "module.aws_vpc.module.aws_vpc.aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc.module.aws_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "module.aws_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:300043774766:route-table/rtb-0d8bd48af3fe587a0",
            "id": "rtb-0d8bd48af3fe587a0",
            "owner_id": "300043774766",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b8ecf9ffe2fd9cd9",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private"
            },
            "tags_all": {
              "Name": "private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0404873d798c99fa0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_vpc.module.aws_vpc.aws_internet_gateway.ntier_igw",
            "module.aws_vpc.module.aws_vpc.aws_subnet.subnets",
            "module.aws_vpc.module.aws_vpc.aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc.module.aws_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_associations",
      "provider": "module.aws_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bdf2ffc3f8b1284a",
            "route_table_id": "rtb-0d8bd48af3fe587a0",
            "subnet_id": "subnet-0634efc51db7f367b"
          },
          "dependencies": [
            "module.aws_vpc.module.aws_vpc.aws_internet_gateway.ntier_igw",
            "module.aws_vpc.module.aws_vpc.aws_route_table.private",
            "module.aws_vpc.module.aws_vpc.aws_subnet.subnets",
            "module.aws_vpc.module.aws_vpc.aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc.module.aws_vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "module.aws_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:300043774766:security-group/sg-09cf348309d88f6b1",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09cf348309d88f6b1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ssh",
            "name_prefix": "",
            "owner_id": "300043774766",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "web"
            },
            "tags_all": {
              "Name": "web"
            },
            "timeouts": null,
            "vpc_id": "vpc-0404873d798c99fa0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_vpc.module.aws_vpc.aws_subnet.subnets",
            "module.aws_vpc.module.aws_vpc.aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc.module.aws_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnets",
      "provider": "module.aws_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:300043774766:subnet/subnet-0634efc51db7f367b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0634efc51db7f367b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "300043774766",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet1"
            },
            "tags_all": {
              "Name": "subnet1"
            },
            "vpc_id": "vpc-0404873d798c99fa0"
          },
          "dependencies": [
            "module.aws_vpc.module.aws_vpc.aws_vpc.vpc1"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:300043774766:subnet/subnet-0cd24cd5a99674ae1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3b",
            "availability_zone_id": "euw3-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cd24cd5a99674ae1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "300043774766",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet2"
            },
            "tags_all": {
              "Name": "subnet2"
            },
            "vpc_id": "vpc-0404873d798c99fa0"
          },
          "dependencies": [
            "module.aws_vpc.module.aws_vpc.aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc.module.aws_vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc1",
      "provider": "module.aws_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:300043774766:vpc/vpc-0404873d798c99fa0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b02824b0ace2ee8a",
            "default_route_table_id": "rtb-0aa40260f25669682",
            "default_security_group_id": "sg-091ea8c6b82c95b5c",
            "dhcp_options_id": "dopt-004b3bed1220b5270",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0404873d798c99fa0",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0aa40260f25669682",
            "owner_id": "300043774766",
            "tags": {
              "Name": "ec2vpc"
            },
            "tags_all": {
              "Name": "ec2vpc"
            }
          }
        }
      ]
    }
  ]
}